--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,22 +5,25 @@
     "config": "Configuration",
     "security": "Security",
     "logs": "Logs",
-    "profile": "Profile"
+    "profile": "Profile",
+    "license_billing": "License / Billing"
   },
-  "auth": { "login": "Login", "logout": "Logout", "username": "Username", "password": "Password" },
+  "auth": { "login": "Login", "logout": "Logout", "username": "Username", "password": "Password", "host": "Server Host" },
   "button": {
     "save": "Save", "cancel": "Cancel", "delete": "Delete", "close": "Close",
     "reload": "Reload", "add": "Add", "edit": "Edit", "apply": "Apply",
     "activate": "Activate", "import": "Import", "export": "Export",
     "apply_reload": "Apply & Reload", "block": "Block", "allow": "Allow",
-    "refresh": "Refresh", "check_now": "Check & Block Now", "save_defaults": "Save Defaults"
+    "refresh": "Refresh", "check_now": "Check & Block Now", "save_defaults": "Save Defaults",
+    "save_changes": "Save Changes"
   },
   "status": {
     "online": "Online", "offline": "Offline", "registered": "Registered",
     "not_registered": "Not registered", "success": "Success", "error": "Error",
     "loading": "Loading...", "checking": "Checking...", "connected": "Connected",
-    "disconnected": "Disconnected", "enabled": "Enabled", "disabled": "Disabled",
-    "access_denied": "Access Denied"
+    "disconnected": "Disconnected", "enabled": "Enabled", "disabled": "Disabled", "deactivated": "Deactivated",
+    "access_denied": "Access Denied",
+    "connection_ok": "Connection OK"
   },
   "section": {
     "users": "Users", "sip_users": "SIP Users", "acl_users": "ACL Users",
@@ -36,15 +39,23 @@
     "codecs": "Codecs", "host": "Host", "port": "Port", "transport": "Transport",
     "register": "Register", "caller_id": "Caller ID", "name": "Name",
     "type": "Type", "actions": "Actions", "user": "User", "gateway": "Gateway",
-    "comment": "Comment"
+    "comment": "Comment", "status": "Status"
   },
   "dashboard": {
     "gateway_status": "Gateway Status", "user_registrations": "User Registrations",
-    "active_calls": "Active Calls", "call_logs": "Call Logs",
+    "active_calls": "Active Calls", "no_active_calls": "No active calls", "call_logs": "Call Logs",
+    "total_calls_today": "Total Today",
     "no_call_logs": "No calls recorded", "environment": "Environment Variables",
     "no_gateways": "No gateways configured", "no_users_registered": "No users registered",
     "no_logs": "No logs", "call_stats": "Call Statistics",
-    "total_in": "Total Inbound", "total_out": "Total Outbound", "failed": "failed"
+    "total_in": "Total Inbound", "total_out": "Total Outbound", "failed": "failed",
+    "gateways_registered": "Registered",
+    "users_online": "Online",
+    "total_calls": "Total Calls",
+    "failed_calls": "Failed",
+    "blocked_ips": "Blocked IPs",
+    "extensions_active": "Extensions",
+    "license_status": "License"
   },
   "calls": {
     "call_flow": "Connection", "direction": "Direction", "from": "From",
@@ -71,7 +82,10 @@
     "change_password": "Change Password", "current_password": "Current Password",
     "new_password": "New Password", "confirm_password": "Confirm Password",
     "passwords_not_match": "Passwords do not match",
-    "appearance": "Appearance", "theme_mode": "Theme Mode", "color_theme": "Color Theme"
+    "appearance": "Appearance", "theme_mode": "Theme Mode", "color_theme": "Color Theme",
+    "auto_logout": "Auto-Logout", "auto_logout_enabled": "Enable Auto-Logout",
+    "auto_logout_timeout": "Timeout (seconds)",
+    "auto_logout_desc": "Automatically logout after inactivity"
   },
   "theme": {
     "light": "Light", "dark": "Dark", "auto": "Auto",
@@ -92,8 +106,10 @@
     "update_license": "Update License", "activate_license": "Activate License",
     "license": "License", "client": "Client", "licensed": "Licensed",
     "expires": "Expires", "trial_mode": "Trial", "days_remaining": "days remaining",
-    "connections": "connections", "trial_expired_title": "Trial Expired",
-    "trial_expired_text": "Your trial period has expired. Please enter a license key to continue using the application."
+    "connections": "Connections", "trial_expired_title": "Trial Expired",
+    "trial_expired_text": "Your trial period has expired. Please enter a license key to continue using the application.",
+    "nfr": "NFR", "usage": "Usage", "used_of": "{{used}} / {{total}}",
+    "routing_connections": "Routings / Connections"
   },
   "language": { "language": "Language", "german": "German", "english": "English" },
   "logs": {
@@ -103,7 +119,18 @@
     "saved": "Saved", "failed_to_load": "Failed to load logs",
     "server_not_running": "is not running", "debug_dump": "Debug Dump",
     "esl_events": "ESL Events", "esl_connected": "Connected",
-    "esl_disconnected": "Disconnected", "events_buffer": "Event Buffer"
+    "esl_disconnected": "Disconnected", "events_buffer": "Event Buffer",
+    "tab_system": "System Logs",
+    "tab_calls": "Call Logs",
+    "tab_security": "Security Logs",
+    "no_calls": "No call records",
+    "no_security": "No security events",
+    "call_result_answered": "Answered",
+    "call_result_missed": "Missed",
+    "call_result_failed": "Failed",
+    "call_result_busy": "Busy",
+    "event": "Event",
+    "level_all": "All Levels"
   },
   "security": {
     "blacklist": "Blacklist", "whitelist": "Whitelist", "auto_blacklist": "Auto-Blacklist",
@@ -128,12 +155,22 @@
     "save_fail2ban": "Save Fail2Ban Settings", "refresh_status": "Refresh Status",
     "ip_or_cidr": "IP Address or CIDR", "comment_optional": "Comment (optional)"
   },
+  "extension": {
+    "extensions": "Extensions",
+    "add_extension": "Add Extension",
+    "edit_extension": "Edit Extension",
+    "view_extension": "View Extension",
+    "description": "Description",
+    "digits_only": "Only digits allowed",
+    "digits_hint": "Only digits (e.g. 1001)"
+  },
   "gateway": {
     "sip_gateways": "SIP Gateways / Providers", "add_gateway": "Add Gateway",
     "auth_username": "Auth Username (optional)", "auth_username_hint": "For 3CX and some PBX systems"
   },
   "route": {
-    "add_route": "Add Route", "inbound_routes": "Inbound Routes (DID)",
+    "add_route": "Add Route", "edit_route": "Edit Route", "view_route": "View Route",
+    "inbound_routes": "Inbound Routes (DID)",
     "add_inbound": "Add Inbound Route", "did_number": "DID / Phone Number",
     "dest_type": "Destination Type", "add_user_route": "Add User Route"
   },
@@ -141,9 +178,27 @@
     "add_user": "Add User", "edit_user": "Edit User",
     "add_acl_user": "Add ACL User", "edit_acl_user": "Edit ACL User",
     "add_gateway": "Add Gateway", "edit_gateway": "Edit Gateway",
+    "view_user": "View User", "view_acl_user": "View ACL User", "view_gateway": "View Gateway",
     "notification": "Notification", "block_ip_address": "Block IP Address",
     "allow_ip_address": "Allow IP Address", "multiple_ips_hint": "Multiple IPs separated by |",
     "select": "-- Select --"
+  },
+  "confirm": {
+    "save_title": "Save Changes?",
+    "save_message": "Are you sure you want to save these changes?",
+    "delete_title": "Delete?",
+    "delete_message": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
+    "delete_generic": "Are you sure you want to delete this item? This action cannot be undone."
+  },
+  "unsaved": {
+    "title": "Unsaved Changes",
+    "message": "You have unsaved changes. What would you like to do?",
+    "save_now": "Save Now",
+    "exit_without_saving": "Exit Without Saving",
+    "data_loss_title": "Data Will Be Lost",
+    "data_loss_message": "All unsaved changes will be permanently lost. Are you sure you want to continue?",
+    "yes": "Yes, Exit",
+    "no": "No, Go Back"
   },
   "validation": {
     "required": "Required field",
@@ -151,7 +206,10 @@
     "invalid_username": "Only letters, numbers, dots, hyphens, underscores",
     "invalid_extension": "Only digits, *, #, +",
     "min_length": "Minimum {{min}} characters",
-    "leave_empty_keep": "Leave empty to keep current password"
+    "leave_empty_keep": "Leave empty to keep current password",
+    "host_protocol": "Must start with http:// or https://",
+    "host_invalid": "Must be a valid domain, IP address, or localhost",
+    "api_key_required": "API Key is required"
   },
   "system": {
     "system_settings": "System Settings", "server": "Server",
@@ -160,5 +218,30 @@
     "codec_prefs": "Codec Preferences", "default_country": "Default Country Code",
     "outbound_caller_id": "Outbound Caller ID", "save_settings": "Save Settings",
     "esl_settings": "ESL Connection", "esl_password": "Password", "esl_test": "Test Connection"
+  },
+  "countdown": {
+    "logout_in": "Logout in {{seconds}}s",
+    "activity_reset": "Move mouse or press a key to reset",
+    "modal_title": "Session Expiring",
+    "modal_message": "You will be logged out due to inactivity. Click X or move mouse to stay."
+  },
+  "error": {
+    "not_found_title": "404",
+    "not_found_subtitle": "Page Not Found",
+    "not_found_message": "Sorry, the page you're looking for doesn't exist or has been moved.",
+    "go_back": "Go Back",
+    "go_home": "Go to Dashboard"
+  },
+  "tabs": {
+    "move_left": "Move left",
+    "move_right": "Move right",
+    "drag_to_reorder": "Drag to reorder"
+  },
+  "demo": {
+    "title": "Demo Mode",
+    "enable": "Enable Demo Mode",
+    "description": "Run the admin panel with simulated data. No real backend connection needed.",
+    "login_success": "Logged in (Demo Mode)",
+    "active_notice": "Demo mode enabled — no real server connection"
   }
 }
